@@ -8,6 +8,7 @@
 - Fix: [#10228] Can't import RCT1 Deluxe from Steam.
 - Fix: [#10325] Crash when banners have no text.
 - Fix: [#10420] Money effect causing false positive desync.
+- Fix: [#10477] Multitile Scenery unable to be placed higher using shift.
 
 0.2.4 (2019-10-28)
 ------------------------------------------------------------------------
